Fix links on mobile

--- a/assets/scss/_community.scss
+++ b/assets/scss/_community.scss
@@ -101,7 +101,7 @@
     }
 
     &_box_top {
-      height: 300px;
+      min-height: 300px;
     }
 
     &_chevron_right {
